@@ -1,3 +1,7 @@
+2009-10-20 Fred Kiefer <FredKiefer@gmx.de>
+
+	* Source/winlib/WIN32GState.m: Small correction of last change.
+
 2009-10-19 Fred Kiefer <FredKiefer@gmx.de>
 
 	* Headers/gsc/GSGStateOps.h,
